Add credit for tutorial in lecture 06

--- a/code/lecture06/tutorial01.ipynb
+++ b/code/lecture06/tutorial01.ipynb
@@ -28,7 +28,11 @@
     "AFTER Fine-tuning on Electrical Data:\n",
     "Model: \"This transformer is good\"\n",
     "→ Understands: Electrical equipment context\n",
-    "```"
+    "```\n",
+    "\n",
+    "Original tutorial: https://www.kaggle.com/code/ibrahimqasimi/distilbert-fine-tuning-on-imdb-50k-nlp-tutorial\n",
+    "\n",
+    "Simplified by tungdt27 for this course."
    ]
   },
   {
